# divergent

./: Cargo.toml  Makefile
src/: commit_reference.rs  error.rs  lib.rs  main.rs
src/command/: git_integration.rs  mod.rs  operate.rs
src/command/diff/: annotation.rs  app.rs  coordinates.rs  git.rs  mod.rs  search.rs  state.rs  theme.rs  types.rs
src/command/diff/highlight/: config.rs  mod.rs  queries.rs
src/command/diff/render/: diff_view.rs  footer.rs  mod.rs  modal.rs  sidebar.rs
src/config/: cli.rs
src/vcs/: backend.rs  git.rs  jj.rs  mod.rs  test_utils.rs
