[package]
name = "divergent"
version = "2.22.0"
edition = "2021"
license = "MIT"
description = "An interactive terminal diff viewer for git and jj repositories."
keywords = ["cli", "terminal", "diff", "git", "jj"]
categories = ["command-line-interface", "command-line-utilities"]
repository = "https://github.com/cristiandlahoz/divergent"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
spinoff = { version = "0.8.0", features = ["dots"] }
thiserror = "1.0"
ratatui = "0.29"
crossterm = "0.28"
similar = { version = "2.6", features = ["inline", "unicode"] }
notify = "7.0"
notify-debouncer-mini = "0.5"
tree-sitter = "0.24"
streaming-iterator = "0.1"
tree-sitter-highlight = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-json = "0.24"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-css = "0.23"
tree-sitter-html = "0.23"
tree-sitter-toml-ng = "0.7"
tree-sitter-bash = "0.23"
tree-sitter-md = "0.3"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-elixir = "0.3"
tree-sitter-zig = "1.1.2"
tree-sitter-java = "0.23.5"
tree-sitter-xml = "0.7.0"
once_cell = "1.20"
arboard = "3.4"
tui-textarea = "0.7"
sha2 = "0.10"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2", "vendored-openssl", "https"] }
jj-lib = { version = "0.37.0", features = ["git"], optional = true }
chrono = { version = "0.4", optional = true }
pollster = { version = "0.4", optional = true }
futures = { version = "0.3", optional = true }
terminal-light = "1.8.0"

[features]
default = ["jj"]
jj = ["jj-lib", "chrono", "pollster", "futures"]

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
